parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLASS

Grammar

Rule 0     S' -> programa
Rule 1     programa -> directiva_using lista_sentencias
Rule 2     programa -> lista_sentencias
Rule 3     directiva_using -> USING IDENTIFICADOR PUNTO_COMA
Rule 4     lista_sentencias -> sentencia lista_sentencias
Rule 5     lista_sentencias -> sentencia
Rule 6     sentencia -> declaracion
Rule 7     sentencia -> declaracion_var
Rule 8     sentencia -> asignacion
Rule 9     sentencia -> impresion
Rule 10    sentencia -> bucle_while
Rule 11    sentencia -> declaracion_arreglo
Rule 12    sentencia -> metodo_main
Rule 13    sentencia -> estructura_if
Rule 14    sentencia -> declaracion_lista
Rule 15    sentencia -> metodo_void
Rule 16    sentencia -> bucle_for
Rule 17    sentencia -> declaracion_diccionario
Rule 18    sentencia -> declaracion_funcion
Rule 19    sentencia -> sentencia_return
Rule 20    sentencia -> llamada_funcion_stmt
Rule 21    sentencia -> error PUNTO_COMA
Rule 22    sentencia -> error LLAVE_DER
Rule 23    tipo_primitivo -> INT
Rule 24    tipo_primitivo -> FLOAT
Rule 25    tipo_primitivo -> CHAR
Rule 26    tipo_primitivo -> STRING
Rule 27    tipo_primitivo -> BOOL
Rule 28    declaracion -> tipo_primitivo lista_declaraciones PUNTO_COMA
Rule 29    lista_declaraciones -> lista_declaraciones COMA elemento_declaracion
Rule 30    lista_declaraciones -> elemento_declaracion
Rule 31    elemento_declaracion -> IDENTIFICADOR IGUAL expresion
Rule 32    elemento_declaracion -> IDENTIFICADOR
Rule 33    asignacion -> IDENTIFICADOR IGUAL expresion PUNTO_COMA
Rule 34    declaracion_var -> VAR IDENTIFICADOR IGUAL expresion PUNTO_COMA
Rule 35    impresion -> CONSOLE PUNTO WRITE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
Rule 36    impresion -> CONSOLE PUNTO WRITELINE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
Rule 37    expresion -> expresion MAS expresion
Rule 38    expresion -> expresion MENOS expresion
Rule 39    expresion -> expresion MULT expresion
Rule 40    expresion -> expresion DIV expresion
Rule 41    expresion -> expresion MOD expresion
Rule 42    expresion -> expresion IGUAL_IGUAL expresion
Rule 43    expresion -> expresion DIFERENTE expresion
Rule 44    expresion -> expresion MENOR expresion
Rule 45    expresion -> expresion MENOR_IGUAL expresion
Rule 46    expresion -> expresion MAYOR expresion
Rule 47    expresion -> expresion MAYOR_IGUAL expresion
Rule 48    expresion -> expresion AND expresion
Rule 49    expresion -> expresion OR expresion
Rule 50    expresion -> NOT expresion
Rule 51    expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 52    expresion -> ENTERO
Rule 53    expresion -> FLOTANTE
Rule 54    expresion -> CADENA
Rule 55    expresion -> CARACTER
Rule 56    expresion -> IDENTIFICADOR
Rule 57    expresion -> TRUE
Rule 58    expresion -> FALSE
Rule 59    expresion -> lectura_teclado
Rule 60    expresion -> llamada_funcion_expr
Rule 61    lectura_teclado -> CONSOLE PUNTO READLINE PARENTESIS_IZQ PARENTESIS_DER
Rule 62    bucle_while -> WHILE PARENTESIS_IZQ expresion PARENTESIS_DER bloque
Rule 63    bloque -> LLAVE_IZQ lista_sentencias LLAVE_DER
Rule 64    bloque -> LLAVE_IZQ LLAVE_DER
Rule 65    estructura_if -> IF PARENTESIS_IZQ expresion PARENTESIS_DER bloque
Rule 66    estructura_if -> IF PARENTESIS_IZQ expresion PARENTESIS_DER bloque ELSE bloque
Rule 67    estructura_if -> IF PARENTESIS_IZQ expresion PARENTESIS_DER bloque ELSE estructura_if
Rule 68    bucle_for -> FOR PARENTESIS_IZQ tipo_primitivo IDENTIFICADOR IGUAL expresion PUNTO_COMA expresion PUNTO_COMA IDENTIFICADOR IGUAL expresion PARENTESIS_DER bloque
Rule 69    declaracion_arreglo -> tipo_primitivo CORCHETE_IZQ CORCHETE_DER IDENTIFICADOR PUNTO_COMA
Rule 70    declaracion_arreglo -> tipo_primitivo CORCHETE_IZQ CORCHETE_DER IDENTIFICADOR IGUAL NEW tipo_primitivo CORCHETE_IZQ ENTERO CORCHETE_DER PUNTO_COMA
Rule 71    declaracion_lista -> LIST MENOR tipo_primitivo MAYOR IDENTIFICADOR PUNTO_COMA
Rule 72    declaracion_lista -> LIST MENOR tipo_primitivo MAYOR IDENTIFICADOR IGUAL NEW LIST MENOR tipo_primitivo MAYOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
Rule 73    declaracion_diccionario -> DICTIONARY MENOR STRING COMA INT MAYOR IDENTIFICADOR PUNTO_COMA
Rule 74    declaracion_diccionario -> DICTIONARY MENOR INT COMA INT MAYOR IDENTIFICADOR PUNTO_COMA
Rule 75    declaracion_diccionario -> DICTIONARY MENOR STRING COMA INT MAYOR IDENTIFICADOR IGUAL NEW DICTIONARY MENOR STRING COMA INT MAYOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
Rule 76    declaracion_diccionario -> DICTIONARY MENOR INT COMA INT MAYOR IDENTIFICADOR IGUAL NEW DICTIONARY MENOR INT COMA INT MAYOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
Rule 77    metodo_main -> STATIC VOID MAIN PARENTESIS_IZQ PARENTESIS_DER bloque
Rule 78    metodo_void -> VOID IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
Rule 79    metodo_void -> PUBLIC VOID IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
Rule 80    metodo_void -> PRIVATE VOID IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
Rule 81    declaracion_funcion -> tipo_primitivo IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
Rule 82    declaracion_funcion -> tipo_primitivo IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER FLECHA_LAMBDA expresion PUNTO_COMA
Rule 83    sentencia_return -> RETURN expresion PUNTO_COMA
Rule 84    sentencia_return -> RETURN PUNTO_COMA
Rule 85    llamada_funcion_stmt -> IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER PUNTO_COMA
Rule 86    llamada_funcion_stmt -> IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
Rule 87    llamada_funcion_expr -> IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER
Rule 88    llamada_funcion_expr -> IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER
Rule 89    argumentos -> argumentos COMA expresion
Rule 90    argumentos -> expresion
Rule 91    parametros -> lista_parametros
Rule 92    parametros -> empty
Rule 93    lista_parametros -> lista_parametros COMA parametro
Rule 94    lista_parametros -> parametro
Rule 95    parametro -> tipo_primitivo IDENTIFICADOR
Rule 96    empty -> <empty>

Terminals, with rules where they appear

AND                  : 48
BOOL                 : 27
CADENA               : 54
CARACTER             : 55
CHAR                 : 25
CLASS                : 
COMA                 : 29 73 74 75 75 76 76 89 93
CONSOLE              : 35 36 61
CORCHETE_DER         : 69 70 70
CORCHETE_IZQ         : 69 70 70
DICTIONARY           : 73 74 75 75 76 76
DIFERENTE            : 43
DIV                  : 40
ELSE                 : 66 67
ENTERO               : 52 70
FALSE                : 58
FLECHA_LAMBDA        : 82
FLOAT                : 24
FLOTANTE             : 53
FOR                  : 68
IDENTIFICADOR        : 3 31 32 33 34 56 68 68 69 70 71 72 73 74 75 76 78 79 80 81 82 85 86 87 88 95
IF                   : 65 66 67
IGUAL                : 31 33 34 68 68 70 72 75 76
IGUAL_IGUAL          : 42
INT                  : 23 73 74 74 75 75 76 76 76 76
LIST                 : 71 72 72
LLAVE_DER            : 22 63 64
LLAVE_IZQ            : 63 64
MAIN                 : 77
MAS                  : 37
MAYOR                : 46 71 72 72 73 74 75 75 76 76
MAYOR_IGUAL          : 47
MENOR                : 44 71 72 72 73 74 75 75 76 76
MENOR_IGUAL          : 45
MENOS                : 38
MOD                  : 41
MULT                 : 39
NEW                  : 70 72 75 76
NOT                  : 50
OR                   : 49
PARENTESIS_DER       : 35 36 51 61 62 65 66 67 68 72 75 76 77 78 79 80 81 82 85 86 87 88
PARENTESIS_IZQ       : 35 36 51 61 62 65 66 67 68 72 75 76 77 78 79 80 81 82 85 86 87 88
PRIVATE              : 80
PUBLIC               : 79
PUNTO                : 35 36 61
PUNTO_COMA           : 3 21 28 33 34 35 36 68 68 69 70 71 72 73 74 75 76 82 83 84 85 86
READLINE             : 61
RETURN               : 83 84
STATIC               : 77
STRING               : 26 73 75 75
TRUE                 : 57
USING                : 3
VAR                  : 34
VOID                 : 77 78 79 80
WHILE                : 62
WRITE                : 35
WRITELINE            : 36
error                : 21 22

Nonterminals, with rules where they appear

argumentos           : 85 87 89
asignacion           : 8
bloque               : 62 65 66 66 67 68 77 78 79 80 81
bucle_for            : 16
bucle_while          : 10
declaracion          : 6
declaracion_arreglo  : 11
declaracion_diccionario : 17
declaracion_funcion  : 18
declaracion_lista    : 14
declaracion_var      : 7
directiva_using      : 1
elemento_declaracion : 29 30
empty                : 92
estructura_if        : 13 67
expresion            : 31 33 34 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 51 62 65 66 67 68 68 68 82 83 89 90
impresion            : 9
lectura_teclado      : 59
lista_declaraciones  : 28 29
lista_parametros     : 91 93
lista_sentencias     : 1 2 4 63
llamada_funcion_expr : 60
llamada_funcion_stmt : 20
metodo_main          : 12
metodo_void          : 15
parametro            : 93 94
parametros           : 78 79 80 81 82
programa             : 0
sentencia            : 4 5
sentencia_return     : 19
tipo_primitivo       : 28 68 69 70 70 71 72 72 81 82 95

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . directiva_using lista_sentencias
    (2) programa -> . lista_sentencias
    (3) directiva_using -> . USING IDENTIFICADOR PUNTO_COMA
    (4) lista_sentencias -> . sentencia lista_sentencias
    (5) lista_sentencias -> . sentencia
    (6) sentencia -> . declaracion
    (7) sentencia -> . declaracion_var
    (8) sentencia -> . asignacion
    (9) sentencia -> . impresion
    (10) sentencia -> . bucle_while
    (11) sentencia -> . declaracion_arreglo
    (12) sentencia -> . metodo_main
    (13) sentencia -> . estructura_if
    (14) sentencia -> . declaracion_lista
    (15) sentencia -> . metodo_void
    (16) sentencia -> . bucle_for
    (17) sentencia -> . declaracion_diccionario
    (18) sentencia -> . declaracion_funcion
    (19) sentencia -> . sentencia_return
    (20) sentencia -> . llamada_funcion_stmt
    (21) sentencia -> . error PUNTO_COMA
    (22) sentencia -> . error LLAVE_DER
    (28) declaracion -> . tipo_primitivo lista_declaraciones PUNTO_COMA
    (34) declaracion_var -> . VAR IDENTIFICADOR IGUAL expresion PUNTO_COMA
    (33) asignacion -> . IDENTIFICADOR IGUAL expresion PUNTO_COMA
    (35) impresion -> . CONSOLE PUNTO WRITE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
    (36) impresion -> . CONSOLE PUNTO WRITELINE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
    (62) bucle_while -> . WHILE PARENTESIS_IZQ expresion PARENTESIS_DER bloque
    (69) declaracion_arreglo -> . tipo_primitivo CORCHETE_IZQ CORCHETE_DER IDENTIFICADOR PUNTO_COMA
    (70) declaracion_arreglo -> . tipo_primitivo CORCHETE_IZQ CORCHETE_DER IDENTIFICADOR IGUAL NEW tipo_primitivo CORCHETE_IZQ ENTERO CORCHETE_DER PUNTO_COMA
    (77) metodo_main -> . STATIC VOID MAIN PARENTESIS_IZQ PARENTESIS_DER bloque
    (65) estructura_if -> . IF PARENTESIS_IZQ expresion PARENTESIS_DER bloque
    (66) estructura_if -> . IF PARENTESIS_IZQ expresion PARENTESIS_DER bloque ELSE bloque
    (67) estructura_if -> . IF PARENTESIS_IZQ expresion PARENTESIS_DER bloque ELSE estructura_if
    (71) declaracion_lista -> . LIST MENOR tipo_primitivo MAYOR IDENTIFICADOR PUNTO_COMA
    (72) declaracion_lista -> . LIST MENOR tipo_primitivo MAYOR IDENTIFICADOR IGUAL NEW LIST MENOR tipo_primitivo MAYOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
    (78) metodo_void -> . VOID IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (79) metodo_void -> . PUBLIC VOID IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (80) metodo_void -> . PRIVATE VOID IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (68) bucle_for -> . FOR PARENTESIS_IZQ tipo_primitivo IDENTIFICADOR IGUAL expresion PUNTO_COMA expresion PUNTO_COMA IDENTIFICADOR IGUAL expresion PARENTESIS_DER bloque
    (73) declaracion_diccionario -> . DICTIONARY MENOR STRING COMA INT MAYOR IDENTIFICADOR PUNTO_COMA
    (74) declaracion_diccionario -> . DICTIONARY MENOR INT COMA INT MAYOR IDENTIFICADOR PUNTO_COMA
    (75) declaracion_diccionario -> . DICTIONARY MENOR STRING COMA INT MAYOR IDENTIFICADOR IGUAL NEW DICTIONARY MENOR STRING COMA INT MAYOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
    (76) declaracion_diccionario -> . DICTIONARY MENOR INT COMA INT MAYOR IDENTIFICADOR IGUAL NEW DICTIONARY MENOR INT COMA INT MAYOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
    (81) declaracion_funcion -> . tipo_primitivo IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (82) declaracion_funcion -> . tipo_primitivo IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER FLECHA_LAMBDA expresion PUNTO_COMA
    (83) sentencia_return -> . RETURN expresion PUNTO_COMA
    (84) sentencia_return -> . RETURN PUNTO_COMA
    (85) llamada_funcion_stmt -> . IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER PUNTO_COMA
    (86) llamada_funcion_stmt -> . IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
    (23) tipo_primitivo -> . INT
    (24) tipo_primitivo -> . FLOAT
    (25) tipo_primitivo -> . CHAR
    (26) tipo_primitivo -> . STRING
    (27) tipo_primitivo -> . BOOL

    USING           shift and go to state 4
    error           shift and go to state 22
    VAR             shift and go to state 24
    IDENTIFICADOR   shift and go to state 5
    CONSOLE         shift and go to state 25
    WHILE           shift and go to state 26
    STATIC          shift and go to state 27
    IF              shift and go to state 29
    LIST            shift and go to state 30
    VOID            shift and go to state 28
    PUBLIC          shift and go to state 31
    PRIVATE         shift and go to state 32
    FOR             shift and go to state 33
    DICTIONARY      shift and go to state 34
    RETURN          shift and go to state 37
    INT             shift and go to state 36
    FLOAT           shift and go to state 38
    CHAR            shift and go to state 39
    STRING          shift and go to state 35
    BOOL            shift and go to state 40

    programa                       shift and go to state 1
    directiva_using                shift and go to state 2
    lista_sentencias               shift and go to state 3
    sentencia                      shift and go to state 6
    declaracion                    shift and go to state 7
    declaracion_var                shift and go to state 8
    asignacion                     shift and go to state 9
    impresion                      shift and go to state 10
    bucle_while                    shift and go to state 11
    declaracion_arreglo            shift and go to state 12
    metodo_main                    shift and go to state 13
    estructura_if                  shift and go to state 14
    declaracion_lista              shift and go to state 15
    metodo_void                    shift and go to state 16
    bucle_for                      shift and go to state 17
    declaracion_diccionario        shift and go to state 18
    declaracion_funcion            shift and go to state 19
    sentencia_return               shift and go to state 20
    llamada_funcion_stmt           shift and go to state 21
    tipo_primitivo                 shift and go to state 23

state 1

    (0) S' -> programa .



state 2

    (1) programa -> directiva_using . lista_sentencias
    (4) lista_sentencias -> . sentencia lista_sentencias
    (5) lista_sentencias -> . sentencia
    (6) sentencia -> . declaracion
    (7) sentencia -> . declaracion_var
    (8) sentencia -> . asignacion
    (9) sentencia -> . impresion
    (10) sentencia -> . bucle_while
    (11) sentencia -> . declaracion_arreglo
    (12) sentencia -> . metodo_main
    (13) sentencia -> . estructura_if
    (14) sentencia -> . declaracion_lista
    (15) sentencia -> . metodo_void
    (16) sentencia -> . bucle_for
    (17) sentencia -> . declaracion_diccionario
    (18) sentencia -> . declaracion_funcion
    (19) sentencia -> . sentencia_return
    (20) sentencia -> . llamada_funcion_stmt
    (21) sentencia -> . error PUNTO_COMA
    (22) sentencia -> . error LLAVE_DER
    (28) declaracion -> . tipo_primitivo lista_declaraciones PUNTO_COMA
    (34) declaracion_var -> . VAR IDENTIFICADOR IGUAL expresion PUNTO_COMA
    (33) asignacion -> . IDENTIFICADOR IGUAL expresion PUNTO_COMA
    (35) impresion -> . CONSOLE PUNTO WRITE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
    (36) impresion -> . CONSOLE PUNTO WRITELINE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
    (62) bucle_while -> . WHILE PARENTESIS_IZQ expresion PARENTESIS_DER bloque
    (69) declaracion_arreglo -> . tipo_primitivo CORCHETE_IZQ CORCHETE_DER IDENTIFICADOR PUNTO_COMA
    (70) declaracion_arreglo -> . tipo_primitivo CORCHETE_IZQ CORCHETE_DER IDENTIFICADOR IGUAL NEW tipo_primitivo CORCHETE_IZQ ENTERO CORCHETE_DER PUNTO_COMA
    (77) metodo_main -> . STATIC VOID MAIN PARENTESIS_IZQ PARENTESIS_DER bloque
    (65) estructura_if -> . IF PARENTESIS_IZQ expresion PARENTESIS_DER bloque
    (66) estructura_if -> . IF PARENTESIS_IZQ expresion PARENTESIS_DER bloque ELSE bloque
    (67) estructura_if -> . IF PARENTESIS_IZQ expresion PARENTESIS_DER bloque ELSE estructura_if
    (71) declaracion_lista -> . LIST MENOR tipo_primitivo MAYOR IDENTIFICADOR PUNTO_COMA
    (72) declaracion_lista -> . LIST MENOR tipo_primitivo MAYOR IDENTIFICADOR IGUAL NEW LIST MENOR tipo_primitivo MAYOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
    (78) metodo_void -> . VOID IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (79) metodo_void -> . PUBLIC VOID IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (80) metodo_void -> . PRIVATE VOID IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (68) bucle_for -> . FOR PARENTESIS_IZQ tipo_primitivo IDENTIFICADOR IGUAL expresion PUNTO_COMA expresion PUNTO_COMA IDENTIFICADOR IGUAL expresion PARENTESIS_DER bloque
    (73) declaracion_diccionario -> . DICTIONARY MENOR STRING COMA INT MAYOR IDENTIFICADOR PUNTO_COMA
    (74) declaracion_diccionario -> . DICTIONARY MENOR INT COMA INT MAYOR IDENTIFICADOR PUNTO_COMA
    (75) declaracion_diccionario -> . DICTIONARY MENOR STRING COMA INT MAYOR IDENTIFICADOR IGUAL NEW DICTIONARY MENOR STRING COMA INT MAYOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
    (76) declaracion_diccionario -> . DICTIONARY MENOR INT COMA INT MAYOR IDENTIFICADOR IGUAL NEW DICTIONARY MENOR INT COMA INT MAYOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
    (81) declaracion_funcion -> . tipo_primitivo IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (82) declaracion_funcion -> . tipo_primitivo IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER FLECHA_LAMBDA expresion PUNTO_COMA
    (83) sentencia_return -> . RETURN expresion PUNTO_COMA
    (84) sentencia_return -> . RETURN PUNTO_COMA
    (85) llamada_funcion_stmt -> . IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER PUNTO_COMA
    (86) llamada_funcion_stmt -> . IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
    (23) tipo_primitivo -> . INT
    (24) tipo_primitivo -> . FLOAT
    (25) tipo_primitivo -> . CHAR
    (26) tipo_primitivo -> . STRING
    (27) tipo_primitivo -> . BOOL

    error           shift and go to state 22
    VAR             shift and go to state 24
    IDENTIFICADOR   shift and go to state 5
    CONSOLE         shift and go to state 25
    WHILE           shift and go to state 26
    STATIC          shift and go to state 27
    IF              shift and go to state 29
    LIST            shift and go to state 30
    VOID            shift and go to state 28
    PUBLIC          shift and go to state 31
    PRIVATE         shift and go to state 32
    FOR             shift and go to state 33
    DICTIONARY      shift and go to state 34
    RETURN          shift and go to state 37
    INT             shift and go to state 36
    FLOAT           shift and go to state 38
    CHAR            shift and go to state 39
    STRING          shift and go to state 35
    BOOL            shift and go to state 40

    lista_sentencias               shift and go to state 41
    sentencia                      shift and go to state 6
    declaracion                    shift and go to state 7
    declaracion_var                shift and go to state 8
    asignacion                     shift and go to state 9
    impresion                      shift and go to state 10
    bucle_while                    shift and go to state 11
    declaracion_arreglo            shift and go to state 12
    metodo_main                    shift and go to state 13
    estructura_if                  shift and go to state 14
    declaracion_lista              shift and go to state 15
    metodo_void                    shift and go to state 16
    bucle_for                      shift and go to state 17
    declaracion_diccionario        shift and go to state 18
    declaracion_funcion            shift and go to state 19
    sentencia_return               shift and go to state 20
    llamada_funcion_stmt           shift and go to state 21
    tipo_primitivo                 shift and go to state 23

state 3

    (2) programa -> lista_sentencias .

    $end            reduce using rule 2 (programa -> lista_sentencias .)


state 4

    (3) directiva_using -> USING . IDENTIFICADOR PUNTO_COMA

    IDENTIFICADOR   shift and go to state 42


state 5

    (33) asignacion -> IDENTIFICADOR . IGUAL expresion PUNTO_COMA
    (85) llamada_funcion_stmt -> IDENTIFICADOR . PARENTESIS_IZQ argumentos PARENTESIS_DER PUNTO_COMA
    (86) llamada_funcion_stmt -> IDENTIFICADOR . PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA

    IGUAL           shift and go to state 43
    PARENTESIS_IZQ  shift and go to state 44


state 6

    (4) lista_sentencias -> sentencia . lista_sentencias
    (5) lista_sentencias -> sentencia .
    (4) lista_sentencias -> . sentencia lista_sentencias
    (5) lista_sentencias -> . sentencia
    (6) sentencia -> . declaracion
    (7) sentencia -> . declaracion_var
    (8) sentencia -> . asignacion
    (9) sentencia -> . impresion
    (10) sentencia -> . bucle_while
    (11) sentencia -> . declaracion_arreglo
    (12) sentencia -> . metodo_main
    (13) sentencia -> . estructura_if
    (14) sentencia -> . declaracion_lista
    (15) sentencia -> . metodo_void
    (16) sentencia -> . bucle_for
    (17) sentencia -> . declaracion_diccionario
    (18) sentencia -> . declaracion_funcion
    (19) sentencia -> . sentencia_return
    (20) sentencia -> . llamada_funcion_stmt
    (21) sentencia -> . error PUNTO_COMA
    (22) sentencia -> . error LLAVE_DER
    (28) declaracion -> . tipo_primitivo lista_declaraciones PUNTO_COMA
    (34) declaracion_var -> . VAR IDENTIFICADOR IGUAL expresion PUNTO_COMA
    (33) asignacion -> . IDENTIFICADOR IGUAL expresion PUNTO_COMA
    (35) impresion -> . CONSOLE PUNTO WRITE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
    (36) impresion -> . CONSOLE PUNTO WRITELINE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
    (62) bucle_while -> . WHILE PARENTESIS_IZQ expresion PARENTESIS_DER bloque
    (69) declaracion_arreglo -> . tipo_primitivo CORCHETE_IZQ CORCHETE_DER IDENTIFICADOR PUNTO_COMA
    (70) declaracion_arreglo -> . tipo_primitivo CORCHETE_IZQ CORCHETE_DER IDENTIFICADOR IGUAL NEW tipo_primitivo CORCHETE_IZQ ENTERO CORCHETE_DER PUNTO_COMA
    (77) metodo_main -> . STATIC VOID MAIN PARENTESIS_IZQ PARENTESIS_DER bloque
    (65) estructura_if -> . IF PARENTESIS_IZQ expresion PARENTESIS_DER bloque
    (66) estructura_if -> . IF PARENTESIS_IZQ expresion PARENTESIS_DER bloque ELSE bloque
    (67) estructura_if -> . IF PARENTESIS_IZQ expresion PARENTESIS_DER bloque ELSE estructura_if
    (71) declaracion_lista -> . LIST MENOR tipo_primitivo MAYOR IDENTIFICADOR PUNTO_COMA
    (72) declaracion_lista -> . LIST MENOR tipo_primitivo MAYOR IDENTIFICADOR IGUAL NEW LIST MENOR tipo_primitivo MAYOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
    (78) metodo_void -> . VOID IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (79) metodo_void -> . PUBLIC VOID IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (80) metodo_void -> . PRIVATE VOID IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (68) bucle_for -> . FOR PARENTESIS_IZQ tipo_primitivo IDENTIFICADOR IGUAL expresion PUNTO_COMA expresion PUNTO_COMA IDENTIFICADOR IGUAL expresion PARENTESIS_DER bloque
    (73) declaracion_diccionario -> . DICTIONARY MENOR STRING COMA INT MAYOR IDENTIFICADOR PUNTO_COMA
    (74) declaracion_diccionario -> . DICTIONARY MENOR INT COMA INT MAYOR IDENTIFICADOR PUNTO_COMA
    (75) declaracion_diccionario -> . DICTIONARY MENOR STRING COMA INT MAYOR IDENTIFICADOR IGUAL NEW DICTIONARY MENOR STRING COMA INT MAYOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
    (76) declaracion_diccionario -> . DICTIONARY MENOR INT COMA INT MAYOR IDENTIFICADOR IGUAL NEW DICTIONARY MENOR INT COMA INT MAYOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
    (81) declaracion_funcion -> . tipo_primitivo IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (82) declaracion_funcion -> . tipo_primitivo IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER FLECHA_LAMBDA expresion PUNTO_COMA
    (83) sentencia_return -> . RETURN expresion PUNTO_COMA
    (84) sentencia_return -> . RETURN PUNTO_COMA
    (85) llamada_funcion_stmt -> . IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER PUNTO_COMA
    (86) llamada_funcion_stmt -> . IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER PUNTO_COMA
    (23) tipo_primitivo -> . INT
    (24) tipo_primitivo -> . FLOAT
    (25) tipo_primitivo -> . CHAR
    (26) tipo_primitivo -> . STRING
    (27) tipo_primitivo -> . BOOL

    $end            reduce using rule 5 (lista_sentencias -> sentencia .)
    LLAVE_DER       reduce using rule 5 (lista_sentencias -> sentencia .)
    error           shift and go to state 22
    VAR             shift and go to state 24
    IDENTIFICADOR   shift and go to state 5
    CONSOLE         shift and go to state 25
    WHILE           shift and go to state 26
    STATIC          shift and go to state 27
    IF              shift and go to state 29
    LIST            shift and go to state 30
    VOID            shift and go to state 28
    PUBLIC          shift and go to state 31
    PRIVATE         shift and go to state 32
    FOR             shift and go to state 33
    DICTIONARY      shift and go to state 34
    RETURN          shift and go to state 37
    INT             shift and go to state 36
    FLOAT           shift and go to state 38
    CHAR            shift and go to state 39
    STRING          shift and go to state 35
    BOOL            shift and go to state 40

    sentencia                      shift and go to state 6
    lista_sentencias               shift and go to state 45
    declaracion                    shift and go to state 7
    declaracion_var                shift and go to state 8
    asignacion                     shift and go to state 9
    impresion                      shift and go to state 10
    bucle_while                    shift and go to state 11
    declaracion_arreglo            shift and go to state 12
    metodo_main                    shift and go to state 13
    estructura_if                  shift and go to state 14
    declaracion_lista              shift and go to state 15
    metodo_void                    shift and go to state 16
    bucle_for                      shift and go to state 17
    declaracion_diccionario        shift and go to state 18
    declaracion_funcion            shift and go to state 19
    sentencia_return               shift and go to state 20
    llamada_funcion_stmt           shift and go to state 21
    tipo_primitivo                 shift and go to state 23

state 7

    (6) sentencia -> declaracion .

    error           reduce using rule 6 (sentencia -> declaracion .)
    VAR             reduce using rule 6 (sentencia -> declaracion .)
    IDENTIFICADOR   reduce using rule 6 (sentencia -> declaracion .)
    CONSOLE         reduce using rule 6 (sentencia -> declaracion .)
    WHILE           reduce using rule 6 (sentencia -> declaracion .)
    STATIC          reduce using rule 6 (sentencia -> declaracion .)
    IF              reduce using rule 6 (sentencia -> declaracion .)
    LIST            reduce using rule 6 (sentencia -> declaracion .)
    VOID            reduce using rule 6 (sentencia -> declaracion .)
    PUBLIC          reduce using rule 6 (sentencia -> declaracion .)
    PRIVATE         reduce using rule 6 (sentencia -> declaracion .)
    FOR             reduce using rule 6 (sentencia -> declaracion .)
    DICTIONARY      reduce using rule 6 (sentencia -> declaracion .)
    RETURN          reduce using rule 6 (sentencia -> declaracion .)
    INT             reduce using rule 6 (sentencia -> declaracion .)
    FLOAT           reduce using rule 6 (sentencia -> declaracion .)
    CHAR            reduce using rule 6 (sentencia -> declaracion .)
    STRING          reduce using rule 6 (sentencia -> declaracion .)
    BOOL            reduce using rule 6 (sentencia -> declaracion .)
    $end            reduce using rule 6 (sentencia -> declaracion .)
    LLAVE_DER       reduce using rule 6 (sentencia -> declaracion .)


state 8

    (7) sentencia -> declaracion_var .
